--- a/gwt-table-to-excel-demo/pom.xml
+++ b/gwt-table-to-excel-demo/pom.xml
@@ -3,13 +3,13 @@
 	<groupId>com.googlecode.gwt-table-to-excel</groupId>
 	<artifactId>gwt-table-to-excel-demo</artifactId>
 	<version>0.0.4</version>
-	<packaging>war</packaging>
+	<packaging>pom</packaging>
 	<name>gwt-table-to-excel Demo</name>
 
 	<properties>
-		<gwtVersion>2.5.1</gwtVersion>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
+		<gwtVersion>2.8.1</gwtVersion>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -25,9 +25,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<compilerVersion>1.6</compilerVersion>
+					<source>1.8</source>
+					<target>1.8</target>
+					<compilerVersion>1.8</compilerVersion>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -64,7 +64,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
 				<configuration>
 					<warSourceDirectory>war</warSourceDirectory>
 				</configuration>
@@ -155,7 +155,7 @@
 		<dependency>
 			<groupId>com.googlecode.gwt-table-to-excel</groupId>
 			<artifactId>gwt-table-to-excel</artifactId>
-			<version>0.0.4</version>
+			<version>0.0.5-agroti</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.gwt.google-apis</groupId>
